Fix Patient's Addition and Updating Form insurance information overflow bug
Due to the dimensions applied to the max-height of different Formsets, when adding new forms the insurance form information was hidden

--- a/Sealena/static/base/css/base.css
+++ b/Sealena/static/base/css/base.css
@@ -555,6 +555,7 @@ button:focus{
 }
 
 ::-webkit-scrollbar-track {
+    border-radius: 8px;
     background: rgba(255,255,255,0.1);
 }
 
